# bunker_microservices

./: .dockerignore  .gitignore  README.md  docker-compose.yaml  init.sh  pyproject.toml  seed.py
services/game_service/: Dockerfile-dev  alembic.ini  pyproject.toml
services/game_service/app/: main.py
services/game_service/app/api/: deps.py  exception_handlers.py  main.py
services/game_service/app/api/exceptions/: handlers.py
services/game_service/app/api/v1/: router.py
services/game_service/app/core/: config.py  container.py
services/game_service/app/domain/: uow.py
services/game_service/app/domain/actions/: add_info.py  base.py  change_attribute.py  change_catastrophe.py  factory.py  reveal.py  steal.py
services/game_service/app/domain/dto/: __init__.py  update.py
services/game_service/app/domain/repositories/: action_card.py  attribute.py  character.py  (+1 more)
services/game_service/app/infrastructure/: uow.py
services/game_service/app/services/: character.py  game.py  voting.py
services/game_service/migrations/: env.py
services/game_service/migrations/versions/: 271f77fab100_initial_migration.py
services/tg_bot/: Dockerfile-dev  pyproject.toml
services/tg_bot/app/: bot.py  consts.py  main.py  schema.py  utils.py
services/tg_bot/app/api/: webhook.py
services/tg_bot/app/callbacks/: factory.py  handlers.py
services/tg_bot/app/core/: config.py
services/tg_bot/app/handlers/: game.py
services/tg_bot/app/keyboards/: __init__.py
services/tg_bot/app/messaging/: broker.py  handlers.py
services/tg_bot/app/middlewares/: error.py
services/tg_bot/app/services/: game.py
(+27 files in other folders)
