[project]
name = "game-service"
version = "0.1.0"
description = "Main service for all game logic"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "dependency-injector>=4.48.3",
    "fastapi>=0.134.0",
    "faststream[rabbit]>=0.6.6",
    "nanoid>=2.0.0",
    "pydantic-settings>=2.13.1",
    "sentry-sdk[fastapi]>=2.43.0",
    "sqlalchemy>=2.0.47",
    "alembic>=1.17.1",
    "shared",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = []
